# ilc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  run.bat
.github/workflows/: build_cmake.yml
include/ilc/cli/: commands.h  console_color.h  cross_platform.h  log.h  logger.h  options.h
include/ilc/diagnostics/: diagnostic_printer.h
include/ilc/interactive/: actions_provider.h  interactive_engine.h
include/ilc/jit/: jit.h  jit_driver.h
include/ilc/misc/: const.h  file_system.h  helpers.h  log.h  util.h
include/ilc/passes/: directive_processor_pass.h
include/ilc/passes/ionir/: ionir_directive_processor_pass.h  (+1 more)
include/ilc/processing/: driver.h  linker_argument_builder.h  linker_invoker.h  linker_util.h  output_generator_result.h
include/ilc/repl/: actions_provider.h  ionir_processor.h  ionlang_processor.h  processor.h  repl.h  repl_processor.h
include/ilc/reporting/: code_highlight.h  code_trace_block.h  stack_trace_factory.h
src/: ilc.cpp  interactive_engine.h  onyx.cpp
src/_misc/: const.cpp
src/ast/: ast_printer.cpp
src/cli/: options.cpp
src/diagnostics/: code_highlight.cpp  diagnostic_printer.cpp
src/interactive/: actions_provider.cpp  actions_provider.h  interactive_engine.cpp  interactive_engine.h
src/jit/: jit.cpp  jit_driver.cpp
src/misc/: console_color.cpp  file_system.cpp  helpers.h
src/passes/: directive_processor_pass.cpp
src/passes/ionir/: ionir_directive_processor_pass.cpp  ionir_logger_pass.cpp
src/passes/ionlang/: ionlang_logger_pass.cpp  ionlang_printer_pass.cpp
src/processing/: driver.cpp  linker_invoker.cpp
src/repl/: actions_provider.cpp  ionir_processor.cpp  ionlang_processor.cpp  processor.cpp  repl.cpp  repl_processor.cpp
src/reporting/: code_highlight.cpp  code_trace_block.cpp  stack_trace_factory.cpp
(+2 files in other folders)
